--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,33 +13,35 @@
     />
     <title>Login</title>
     <style type="text/css">
-      .divForm {
-        position: absolute; /*绝对定位*/
-        width: 300px;
-        height: 200px;
-        text-align: center; /*(让div中的内容居中)*/
-        top: 32%;
-        left: 50%;
-        margin-left: -150px;
-        opacity: 80%;
-      }
       body {
         background-size: 100% 100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       a {
         font-weight: bolder;
       }
       .layui-form {
-        opacity: 95%;
+        opacity: 90%;
+        width: 360px;
+        height: 300px;
       }
     </style>
   </head>
 
   <body background="./assets/images/login.jpg">
     <div class="divForm layui-anim layui-anim-scaleSpring">
-      <form method="post" action="./login" class="layui-form">
+      <form method="post" action="/login" class="layui-form">
         <div class="layui-form-item">
-          <label class="layui-form-label">Username</label>
+          <i class="layui-icon" style="font-size: 30px">&#xe6af;</i> WELCOME
+          HOME!
+        </div>
+        <div class="layui-form-item">
+          <label class="layui-form-label"
+            ><i class="layui-icon">&#xe66f;</i> Username</label
+          >
           <div class="layui-input-block">
             <input
               type="username"
@@ -54,7 +56,9 @@
         </div>
         <div class="layui-form-item">
           <i class="layui-icon-key"></i>
-          <label class="layui-form-label">Password</label>
+          <label class="layui-form-label"
+            ><i class="layui-icon">&#xe673;</i> Password</label
+          >
           <div class="layui-input-block">
             <input
               type="password"
@@ -68,13 +72,14 @@
           </div>
         </div>
 
+        <br />
         <div class="layui-form-item">
           <center>
             <input
               type="submit"
               name="submit"
               value="Login"
-              class="layui-btn layui-btn-normal"
+              class="layui-btn layui-btn-lg layui-btn-normal"
             />
           </center>
         </div>
@@ -82,10 +87,11 @@
         <br />
         <div class="layui-form-item">
           <center>
-            <a href="register.html">Don't have an account? Click here!</a>
+            <a href="register.jsp">Don't have an account? Click here!</a>
           </center>
         </div>
       </form>
     </div>
+    <script src="assets/layui.js"></script>
   </body>
 </html>
