modify html ref

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -87,7 +87,7 @@
         <br />
         <div class="layui-form-item">
           <center>
-            <a href="register.jsp">Don't have an account? Click here!</a>
+            <a href="register.html">Don't have an account? Click here!</a>
           </center>
         </div>
       </form>
