--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -146,7 +146,7 @@
         </div>
         <br />
         <center>
-          <a href="login.jsp" rel="">Already have an account? Click here!</a>
+          <a href="login.html" rel="">Already have an account? Click here!</a>
         </center>
       </form>
     </div>
