--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -79,7 +79,7 @@
           <div class="layui-input-block">
             <input
               type="username"
-              name="username"
+              name="userName"
               required
               lay-verify="required"
               autocomplete="off"
