--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -45,7 +45,7 @@
           <div class="layui-input-block">
             <input
               type="username"
-              name="username"
+              name="userName"
               required
               lay-verify="required"
               autocomplete="off"
